<resources>
    <string name="app_name">FaceRun</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main_run">MainRunActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_motto_en">You can either travel or read,but either your body or soul must be on the way.</string>
    <string name="txt_motto_ch">身体和灵魂总有一个要在路上</string>
    <string name="all_offline">所有城市</string>
    <string name="download_offline">下载管理</string>

    <!-- 轨迹纠偏 -->
    <string name="trace_demo">轨迹纠偏功能</string>
    <string name="trace_description">将轨迹平滑的绘制在地图上</string>
    <string name="distance">"总距离："</string>
    <string name="stop_time">"等   待："</string>
    <string name="draw_lines">轨迹纠偏</string>
    <string name="clean_finished_overlay_status">清除已完成线路</string>
    <string name="radiobutton_gaode">高德坐标</string>
    <string name="radiobutton_gps">GPS坐标</string>
    <string name="radiobutton_baidu">百度坐标</string>
    <string name="action_sport_mode">运动模式</string>

    <string name="version_name">当前版本：</string>
    <string name="can_not_find_version_name">没有发现版本号</string>
    <string name="action_swipe_delete">删除</string>
    <string name="action_swipe_edit">编辑</string>
    <string name="action_swipe_correct_line">轨迹</string>
    <string name="action_swipe_synchronize">同步</string>

    <string name="action_wake_up_badi">巴弟快跑</string>
    <string name="action_wake_up_run_start">开始跑步</string>
    <string name="action_wake_up_run_over">跑步结束</string>
    <string name="action_wake_up_volume_up">增大音量</string>
    <string name="action_wake_up_volume_down">减小音量</string>
    <string name="action_wake_up_next">下一首</string>
    <string name="action_wake_up_music_play">播放</string>
    <string name="action_wake_up_music_pause">暂停</string>

    <string name="txt_register">注册</string>
    <string name="txt_login">登录</string>
    <string name="txt_account">帐号</string>
    <string name="txt_email">邮箱</string>
    <string name="txt_password">密码</string>
    <string name="txt_input_email_address">请输入邮箱地址</string>
    <string name="please_input_password">请输入密码</string>
    <string name="txt_complete">完成</string>
    <string name="txt_cancle">取消</string>
    <string name="title_activity_test">TestActivity</string>

</resources>
