<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg_color"
    android:orientation="vertical">

    <com.fly.run.view.actionbar.CommonActionBar
        android:id="@+id/common_action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/login_root_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/reg_edit_zone_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="60dp"
                android:orientation="horizontal"
                android:paddingLeft="12dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="4"
                    android:gravity="center_vertical|left"
                    android:minWidth="90dp"
                    android:text="@string/txt_email"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_input_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/txt_input_email_address"
                    android:maxLength="40"
                    android:paddingLeft="12dp"
                    android:singleLine="true"
                    android:textColorHint="#b3b3b3"
                    android:textSize="16sp"
                    android:typeface="sans" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#e8e8e8" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="60dp"
                android:orientation="horizontal"
                android:paddingLeft="12dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="4"
                    android:gravity="center_vertical|left"
                    android:minWidth="90dp"
                    android:text="@string/txt_password"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_input_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/please_input_password"
                    android:inputType="textPassword"
                    android:maxLength="40"
                    android:paddingLeft="@dimen/margin_12"
                    android:singleLine="true"
                    android:textColorHint="#b3b3b3"
                    android:textSize="16sp"
                    android:typeface="sans" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#e8e8e8" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/margin_20"
            android:layout_marginRight="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_20"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_sign_up_complete"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="bottom|center_horizontal"
                android:background="@drawable/corner_bg_green_selector"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/txt_complete"
                android:textColor="@color/color_ffffff"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>